--- a/configs/gdt_vit_root_test.yaml
+++ b/configs/gdt_vit_root_test.yaml
@@ -11,10 +11,10 @@ encoder:
   num_heads: 12
   in_channels: 3
   stages:
-    - {depth: 2, patch_size_in: 32, patch_size_out: 16, k_selected_ratio: 1.0, max_seq_len: 64} # (256/32)^2 = 64
-    - {depth: 2, patch_size_in: 16, patch_size_out: 8,  k_selected_ratio: 0.25, max_seq_len: 256}
-    - {depth: 2, patch_size_in: 8,  patch_size_out: 4,  k_selected_ratio: 0.125, max_seq_len: 256}
-    - {depth: 2, patch_size_in: 4,  patch_size_out: 2,  k_selected_ratio: 0.0625, max_seq_len: 128}
+    - {depth: 4, patch_size_in: 32, patch_size_out: 16, k_selected_ratio: 1.0, max_seq_len: 64} # (256/32)^2 = 64
+    - {depth: 4, patch_size_in: 16, patch_size_out: 8,  k_selected_ratio: 0.25, max_seq_len: 256}
+    - {depth: 4, patch_size_in: 8,  patch_size_out: 4,  k_selected_ratio: 0.125, max_seq_len: 256}
+    - {depth: 4, patch_size_in: 4,  patch_size_out: 2,  k_selected_ratio: 0.0625, max_seq_len: 128}
 
 # 2. Classifier (DownstreamViTClassifier) Configuration
 classifier:
@@ -34,7 +34,7 @@ training:
   min_lr: 1.0e-6
   
   # Reduced for local training to fit on a single GPU
-  batch_size:  
+  batch_size: 128 
   
   # Reduced for a quick test run
   num_epochs: 120 
