test gdt mae pretrain.

--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -23,3 +23,8 @@ training:
   min_lr: 1.0e-6
   num_epochs: 200
   batch_size: 1024 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
+
+  use_compile: true                # 推荐：开启模型编译
+  use_fused_optimizer: true        # 推荐：开启融合优化器
+  use_checkpointing: true          # 推荐：开启激活检查点以节省显存
+  gradient_accumulation_steps: 1
