--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -17,9 +17,9 @@ model:
 # 2. Training Hyperparameters
 training:
   optimizer: "AdamW"
-  learning_rate: 0.01
+  learning_rate: 0.001
   weight_decay: 0.05
-  warmup_epochs: 20  # 设置10个周期的预热期
+  warmup_epochs: 20 
 
   num_epochs: 200
   batch_size: 1024 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
