--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -13,7 +13,7 @@ model:
   num_heads: 12
   mlp_ratio: 4.0
   num_classes: 1000
-  layer_scale_init_value: 1e-6
+  # layer_scale_init_value: 1e-6
 
 # 2. Training Hyperparameters
 training:
@@ -23,7 +23,7 @@ training:
   warmup_epochs: 10 
 
   num_epochs: 300
-  batch_size: 1024 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
+  batch_size: 512 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
 
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
