--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -18,11 +18,13 @@ model:
 # 2. Training Hyperparameters
 training:
   optimizer: "AdamW"
-  learning_rate: 0.0003
-  weight_decay: 0.05
-  warmup_epochs: 5 
+  learning_rate: 0.001225 # (1e-4 base_lr*bz/256)
+  betas: [0.9, 0.95]
+  weight_decay: 0.3
+  label_smoothing: 0.1
+  warmup_epochs: 20 
 
-  num_epochs: 200
+  num_epochs: 300
   batch_size: 768 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
 
   use_compile: true                # 推荐：开启模型编译
