test gdt mae pretrain.

--- a/configs/vit_fp8.yaml
+++ b/configs/vit_fp8.yaml
@@ -49,6 +49,6 @@ training:
 
   # --- Performance Optimization Flags ---
   # Recommended: Enable torch.compile for end-to-end model optimization.
-  use_compile: true
+  use_compile: false
   # Recommended: Enable Apex's FusedAdam for faster optimizer steps on CUDA.
   use_fused_optimizer: true
