--- a/configs/vit_imagenet_ddp.yaml
+++ b/configs/vit_imagenet_ddp.yaml
@@ -2,6 +2,7 @@
 
 # A name for this specific experiment run, used for creating output directories
 task_name: "vit_imagenet_ddp"
+savefile: "vit-b-16-he"
 
 # 1. Model Architecture Configuration
 model:
@@ -18,7 +19,7 @@ model:
 # 2. Training Hyperparameters
 training:
   optimizer: "AdamW"
-  learning_rate: 0.0013 # (1e-4 base_lr*bz/256)
+  learning_rate: 0.0032 # (1e-4 base_lr*bz/256)
   betas: [0.9, 0.95]
   weight_decay: 0.3
   label_smoothing: 0.1
