--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -22,7 +22,8 @@ training:
   betas: [0.9, 0.95]
   weight_decay: 0.3
   label_smoothing: 0.1
-  warmup_epochs: 20 
+  warmup_epochs: 20
+  eta_min: 3e-4
 
   num_epochs: 300
   batch_size: 1024 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
