--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -13,6 +13,7 @@ model:
   num_heads: 12
   mlp_ratio: 4.0
   num_classes: 1000
+  pretrained: False
   # layer_scale_init_value: 1e-6
 
 # 2. Training Hyperparameters
@@ -31,5 +32,5 @@ training:
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
   use_mixup: False
-  use_finetune: True
+  use_finetune: False
   gradient_accumulation_steps: 1
