--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -31,6 +31,6 @@ training:
 
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
-  use_mixup: False
+  use_mixup: true
   use_finetune: False
   gradient_accumulation_steps: 1
