--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -26,11 +26,11 @@ training:
   warmup_epochs: 20
   eta_min: 0.0001
 
-  num_epochs: 450
+  num_epochs: 300
   batch_size: 1024 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
 
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
   use_mixup: False
-  use_postrain: False
+  use_postrain: true
   gradient_accumulation_steps: 1
