--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -19,18 +19,18 @@ model:
 # 2. Training Hyperparameters
 training:
   optimizer: "AdamW"
-  learning_rate: 0.0016 # (1e-4 base_lr*bz/256)
+  learning_rate: 0.003 # (1e-4 base_lr*bz/256)
   betas: [0.9, 0.95]
   weight_decay: 0.3
   label_smoothing: 0.1
   warmup_epochs: 20
   eta_min: 0.0001
 
-  num_epochs: 450
+  num_epochs: 300
   batch_size: 1024 # Adjust based on your DDP setup (e.g., 256 total / 8 nodes = 32 per node)
 
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
-  use_mixup: False
-  use_postrain: true
+  use_mixup: true
+  use_postrain: False
   gradient_accumulation_steps: 1
