--- a/configs/vit_test.yaml
+++ b/configs/vit_test.yaml
@@ -15,7 +15,7 @@ model:
   num_classes: 1000
   drop_path_rate: 0.1
   pretrained: False
-  layer_scale_init_value: 0.000001
+  layer_scale_init_value: 0.000001 #1e-6
 
 # 2. Training Hyperparameters
 training:
@@ -24,7 +24,7 @@ training:
   betas: [0.9, 0.95]
   weight_decay: 0.3
   label_smoothing: 0.1
-  warmup_epochs: 20
+  warmup_epochs: 30
   eta_min: 0.0001
 
   num_epochs: 300
