--- a/configs/ft_mae_vit-b16_IN1K.yaml
+++ b/configs/ft_mae_vit-b16_IN1K.yaml
@@ -1,6 +1,7 @@
 # --------------------------------------------------- #
 #   MAE 微调配置文件: ViT-Base/16 on ImageNet-1K      #
 # --------------------------------------------------- #
+task_name: "mae_imagenet_finetune"
 
 # --- 模型相关配置 ---
 model:
