--- a/configs/shf-vit-b_IN1K.yaml
+++ b/configs/shf-vit-b_IN1K.yaml
@@ -1,7 +1,7 @@
 # Configuration for the Baseline Vision Transformer (ViT) Model
 
 # A name for this specific experiment run, used for creating output directories
-task_name: "vit_imagenet_local"
+task_name: "shf_imagenet_local"
 
 # 1. Model Architecture Configuration
 model:
@@ -32,7 +32,7 @@ training:
 
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
-  use_mixup: true
+  use_mixup: False
   use_fp8: False
   use_postrain: False
   gradient_accumulation_steps: 1
