test hde pretrain on in1k.

--- a/configs/vit-b_IN1K.yaml
+++ b/configs/vit-b_IN1K.yaml
@@ -28,11 +28,11 @@ training:
   eta_min: 0.000001
 
   num_epochs: 300
-  batch_size: 1024 # batch per node
+  batch_size: 256 # batch per node
 
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
-  use_mixup: true
+  use_mixup: False
   use_fp8: False
   use_postrain: False
   gradient_accumulation_steps: 1
