--- a/configs/shf-vit-b_IN1K.yaml
+++ b/configs/shf-vit-b_IN1K.yaml
@@ -7,6 +7,7 @@ task_name: "shf_imagenet"
 model:
   img_size: 224
   patch_size: 8
+  fixed_length: 196
   in_channels: 3
   embed_dim: 768
   depth: 12
