--- a/configs/vit-b_IN1K.yaml
+++ b/configs/vit-b_IN1K.yaml
@@ -20,7 +20,7 @@ model:
 # 2. Training Hyperparameters
 training:
   optimizer: "AdamW"
-  learning_rate: 0.0016 # (1e-4 base_lr*bz/256)
+  learning_rate: 0.0004 # (1e-4 base_lr*bz/256)
   betas: [0.9, 0.95]
   weight_decay: 0.3
   label_smoothing: 0.1
@@ -32,7 +32,7 @@ training:
 
   use_compile: true                # 推荐：开启模型编译
   use_fused_optimizer: true        # 推荐：开启融合优化器
-  use_mixup: False
+  use_mixup: true
   use_fp8: False
   use_postrain: False
   gradient_accumulation_steps: 1
