--- a/configs/hmae-vit-b_S8D.yaml
+++ b/configs/hmae-vit-b_S8D.yaml
@@ -14,8 +14,8 @@ model:
   decoder_embed_dim: 512
   decoder_depth: 8
   decoder_heads: 16
+  mask_ratio: 0.5
   # HMAE Specific
-  visible_fraction: 0.5
   fixed_length: 1024
   common_patch_size: 32
   max_depth: 8
