--- a/configs/hmae-vit-b_S8D.yaml
+++ b/configs/hmae-vit-b_S8D.yaml
@@ -16,7 +16,7 @@ model:
   decoder_heads: 16
   mask_ratio: 0.5
   # HMAE Specific
-  fixed_length: 1024
+  fixed_length: 4096
   common_patch_size: 32
   max_depth: 8
   # 像素归一化开关：开启后模型预测的是标准化后的像素
@@ -38,4 +38,4 @@ dataset:
 
 output:
   base_dir: "./output"
-  save_name: "hmae_s8d_pretrain_denorm"
+  save_name: "hmae_s8d_pretrain_denorm-seq4k-bs8-lr1.5e-4-100ep"
